--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,12 +16,13 @@ python = "^3.6"
 parsel = "^1.5.2"
 requests = "^2.22.0"
 click = "^8.0.3"
+typing_extensions = "^4.1.0"
 
 [tool.poetry.dev-dependencies]
-ptpython = "^3.0.0"
+python = "^3.7"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
 
 [tool.poetry.scripts]
